create postgres instance and provider to store game data

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
 COOKIE_SECRET=secret
 CONFIG_PATH=./configs/config.dev.yaml
+POSTGRES_CONNECTION_STRING=postgres://root:password@localhost:5432/connect_four?sslmode=disable
+MIGRATION_CONNECTION_STRING=postgres://root:password@localhost:5432/connect_four?sslmode=disable
