--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
 COOKIE_SECRET=secret
 CONFIG_PATH=./configs/config.dev.yaml
-POSTGRES_CONNECTION_STRING=postgres://root:password@localhost:5432/connect_four?sslmode=disable
-MIGRATION_CONNECTION_STRING=postgres://root:password@localhost:5432/connect_four?sslmode=disable
+MONGO_URI=mongodb://root:password@localhost:27017/?maxPoolSize=20&w=majority
+MONGO_DB_NAME=games
