feat: save games to mongodb (#8)
* create postgres instance and provider to store game data

* use mongo instead of postgres, our data won't be super structured

* Add a service layer, it will greatly simplify saving moves to mongo

* Add a repository layer, we might want to switch away from mongo in the future

* Let the service take care of some of the heavy lifting

* Remove turnlist abstraction

* Stub out move saving

* Define mongo objects

* save moves to mongodb

* Automatically switch to mock repository if mongo is offline

* Enable move saving with a config flag

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
 COOKIE_SECRET=secret
 CONFIG_PATH=./configs/config.dev.yaml
+MONGO_URI=mongodb://root:password@localhost:27017/?maxPoolSize=20&w=majority
+MONGO_DB_NAME=games
